generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Employee {
  id String @id @default(cuid())
  name String
  rules String
  days Day[] @relation("employee")
  overrides Day[] @relation("override")
}

model Day {
  id String @id @default(cuid())
  name String
  employee Employee? @relation("employee", fields: [employeeId], references: [id])
  employeeId String?
  week Week @relation(fields: [weekId], references: [id])
  weekId String
  override Employee? @relation("override",fields: [overrideId], references: [id])
  overrideId String?
}

model Week {
  id String @id @default(cuid())
  number Int @unique
  days Day[]
}
