//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Employee {
  id String [pk]
  name String [not null]
  rules String [not null]
  days Day [not null]
  overrides Day [not null]
}

Table Day {
  id String [pk]
  name String [not null]
  employee Employee
  employeeId String
  week Week [not null]
  weekId String [not null]
  override Employee
  overrideId String
}

Table Week {
  id String [pk]
  number Int [unique, not null]
  days Day [not null]
}

Ref: Day.employeeId > Employee.id

Ref: Day.weekId > Week.id

Ref: Day.overrideId > Employee.id